--- a/app/src/main/res/layout/layout_recycler_view.xml
+++ b/app/src/main/res/layout/layout_recycler_view.xml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:orientation="horizontal">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-    <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="70dp"
-        android:layout_height="match_parent"/>
+    <data>
+        <import type="com.example.savino.githubstarring.model.Stargazers"/>
 
-    <TextView
-        android:id="@+id/login"
-        android:gravity="center_vertical"
-        android:layout_marginStart="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        <variable
+            name="user"
+            type="Stargazers"/>
+    </data>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            app:imageUrl="@{user.avatar}"/>
+
+        <TextView
+            android:id="@+id/login"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:text="@{user.login}"/>
+
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center_vertical"
+            android:text="@{user.id}"/>
+
+    </LinearLayout>
+</layout>
